--- a/walmart_data_wrangling.ipynb
+++ b/walmart_data_wrangling.ipynb
@@ -464,7 +464,7 @@
     "- __<i>Dept</i>__: department number\n",
     "- __<i>Date</i>__: last day of the week\n",
     "- __<i>Weekly_Sales</i>__:\n",
-    "  - Average weekly sales for the given department in the given store\n",
+    "  - Weekly sales for the given department in the given store\n",
     "  - Negative if returns exceed sales\n",
     "  - Positive if sales exceed returns\n",
     "- __<i>IsHoliday</i>__: True if holiday falls within the week; otherwise, False"
