--- a/walmart_eda2.ipynb
+++ b/walmart_eda2.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Walmart Sales: EDA Part II"
+    "# Walmart Sales: EDA Part II (Time Series Analysis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The loaded data frames are created from the data wrangling program, which can be obtained at https://github.com/nphan20181/walmart_sales/blob/master/walmart_data_wrangling.ipynb."
    ]
   },
   {
